# Yettas

./: .env  .gitignore  eslint.config.js  frontend_lint.txt  frontend_lint_final.txt  frontend_lint_final_2.txt  frontend_lint_final_2_utf8.txt  frontend_lint_final_utf8.txt  frontend_lint_utf8.txt  index.html  package-lock.json  package.json
Backend/: .env  Cargo.toml  build_error.txt  build_log.txt  build_output.txt  cargo_warnings.txt  cargo_warnings_utf8.txt  check_output.txt  check_output_2.txt  fix_db.js  start_db.ps1
Backend/.cargo/: config.toml
Backend/src/: db.rs  main.rs
Backend/src/handlers/: auth.rs  cart.rs  favorites.rs  mod.rs  mpesa.rs  password_reset.rs
Backend/src/models/: favorite.rs  mod.rs  order.rs  user.rs
Backend/src/utils/: jwt.rs  mod.rs  password.rs
Frontend/css/: dark-mode.css  index.css  login.css
Frontend/html/: cake.html  cookies.html  drinks.html  icecream.html  index.html  login.html
Frontend/script/: addtocart.js  darkMode.js  greetings.js  script.js  script1.js
src/: AppLayout.jsx  MenuCard.jsx
src/Auth/: AuthContext.jsx  AuthPage.jsx  AuthProvider.jsx  ForgotPasswordPage.jsx  ResetPasswordPage.jsx
src/Cake/: CakeCard.jsx  CakesPage.jsx  cake.css
src/Checkout/: CheckoutPage.jsx
src/Cookies/: CookiesPage.jsx
src/Drinks/: DrinksPage.jsx  drinks.css
src/Favorites/: FavoritesPage.jsx
src/Home/: App.css  App.jsx  index.css  main.jsx
src/IceCream/: IceCreamPage.jsx  icecream.css
src/Orders/: OrdersPage.jsx
src/Profile/: ProfilePage.jsx
src/Specials/: SpecialsPage.jsx
src/components/: Footer.jsx  (+2 more)
(+3 files in other folders)
