[package]
name = "yetta_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
futures = "0.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
